--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -1,3 +1,56 @@
-// Place all the styles related to the Chats controller here.
+// Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#chats {
+  height: 500px;
+  overflow: auto;
+  padding: 0px;
+}
+
+.chat-box-textarea {
+    width: 100%;
+    height: 50%;
+    
+    padding: 3px 0pt 3px 3px;
+    border: 1px solid #eeeeee;
+    margin: 1px;
+    overflow-y: hidden;
+    resize: none !important;
+}
+
+.chat-box-message-content {
+    background: white;
+    padding: 10px;
+    border-radius: 2px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+ 
+.chat-box-message-content p {
+    font-size: 16px;
+    margin: 0 0 0.2rem 0;
+    -ms-word-break: break-all;
+ 
+    /* Non standard for webkit */
+    word-break: break-word;
+ 
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+    overflow: none;
+}
+ 
+#input-box {
+    margin-bottom: 0px;
+}
+
+.chat-box-input {
+    padding: 5px;
+    background-color: #ffffff;
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+
+}
+
