--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <br>
     <div class="row">
       <div class="col-md-12">
-        <%= link_to "Start", comments_path, :class => "btn btn-success btn-lg" %>
+        <%= link_to "Start", chats_path, :class => "btn btn-success btn-lg" %>
       </div>
     </div>
   <% else %>
