--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-md-8 panel panel-info">
-      <div class="panel-body" id="chat">
+      <div class="panel-body" id="chats">
         
       </div>
         
