--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -10,3 +10,5 @@ publisher.callback(function() {
 publisher.errback(function() {
   alert('There was an error while sending your message');
 });
+
+($ '#new_gameroom').append("<%= j render(partial: 'gamerooms/gameroom', locals: { t: @gameroom }) %>")
