added user_id to gameroom table. gamerooms displays the creator of gameroom

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -13,6 +13,14 @@ body {
   padding-top: 60px;
 }
 
+canvas{
+  margin: auto;
+}
+
+.shooting-game{
+  position: relative; 
+}
+
 section {
   overflow: auto;
 
