--- a/app/views/gamerooms/show.html.erb
+++ b/app/views/gamerooms/show.html.erb
@@ -1,4 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_gameroom_path(@gameroom) %> |
-<%= link_to 'Back', gamerooms_path %>
+<div id="error"> ERROR </div>
