--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,26 @@
   <body>
     <div class="container">
       <div class="masthead">
-        <%= render 'layouts/header' %>
-          <% flash.each do |key, value| %>
-            <div class="alert alert-<%= key %>">
-              <%= value %>
-            </div>
-          <% end %>
-        
-
+      <%= render 'layouts/header' %>
+        <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>">
+            <%= value %>
+          </div>
+        <% end %>
       </div>
       <hr />
       <%= yield %>
+
+      <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
+      <script type="text/javascript">
+        Pusher.log = function(message) {
+          if (window.console && window.console.log) {
+            window.console.log(message);
+          }
+        };
+        var pusher = new Pusher('1b17fcfc917f88821b2d');
+      </script>
+      
     </div>
     <%= render 'layouts/footer' %>
 
