--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -1,5 +1,4 @@
 <% if current_user %>
-    <%= javascript_include_tag('/assets/refresh_gamerooms') %>
     <%= render 'form' %>
     
     <div class="panel panel-primary col-md-4" id="chats">
@@ -14,33 +13,14 @@
     </div>
     <div class="col-md-8 panel panel-info" id="response_data">
       <div class="text-center">
-        <%= render partial: "gamerooms/form", locals: {:@gameroom => Gameroom.new} %>
-  
+        <%= render "gamerooms/form" %>
         <div class="panel-body" >
-        <table>
-            <tbody id="gamerooms_refresh">
-
-                <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-                <script src="http://js.pusher.com/2.0/pusher.min.js"></script>
-                <script type="text/javascript" charset="utf-8">
-                  
-                  $(function() 
-                  {
-                    var pusher = new Pusher('1b17fcfc917f88821b2d', {encrypted: true});
-                    var channel = pusher.subscribe('test_channel');
-
-                    channel.bind('new_gameroom', function(data) 
-                    {
-                      $('#gamerooms_refresh').prepend('<%=j render @gamerooms %>');
-                      $('tr#<%= dom_id(@gameroom) %>').highlight();
-                    });
-                  });
-                </script>
-
-            </tbody>
-        </table>  
+          <table>
+              <tbody id="gamerooms_refresh">
+                <%= render @gamerooms %>
+              </tbody>
+          </table>  
         </div>
-
       </div>
     </div>
 
