--- a/app/views/gamerooms/_form.html.erb
+++ b/app/views/gamerooms/_form.html.erb
@@ -1,16 +1,4 @@
-<%= form_for @gameroom, remote: true do |f| %>
-	<% if @gameroom.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@gameroom.errors.count, "error") %> prohibited this gameroom from being saved:</h2>
-
-      <ul>
-      <% @gameroom.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_for Gameroom.new, remote: true do |f| %>
   <div class="actions">
     <%= f.submit 'Create New Gameroom', class: 'btn btn-warning btn-sm btn-submit'%>
   </div>
