--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -1,3 +1,25 @@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="http://js.pusher.com/3.0/pusher.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+
+var pusher = new Pusher('1b17fcfc917f88821b2d');
+var channel = pusher.subscribe('gamerooms_channel');
+
+channel.bind('delete_gameroom', function(data) 
+{
+  var msg = data.gameroomID;
+  $('#gameroom_' + msg).fadeOut();  
+});
+
+// channel.bind('new_gameroom', function(data) 
+// {
+//   var msg = data.gameroomID;
+//   $('#containerDIV').load('#gameroom_' + msg);
+// });
+
+</script>
+
+
 <% if current_user %>
     <%= render 'form' %>
     
